# regex-homework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.conf
Regex_HW/: CMakeLists.txt  Main.cpp  errors  run.sh  test.conf
Regex_HW/inc/: ConfigParser.h  Section.h  SectionData.h  SectionDataElement.h  Utils.h  pch.h
Regex_HW/src/: ConfigParser.cpp  Main.cpp  Section.cpp
Regex_HW/tests/: CMakeLists.txt  regex-tests.cpp
Regex_HW/tests/src/: regex-tests.cpp
